feat: add experimental HTTPS support in development script and update .gitignore for certificates

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:https": "next dev --experimental-https",
     "email:dev": "email dev --dir src/actions/mail/templates",
     "build": "next build",
     "start": "next start",
